2002-08-18  KUBO Takehiro <kubo@jiubao.org>
            
   * src/rbgnome-canvas-item.c: BugFix Gnome::CanvasItem#grab, #ungrab.
   * src/rbgnome-canvas-group.c, rbgnome.h: Support GtkType dynamically.
   * sample/test-gnome/canvas_arrowhead.rb, canvas-primitives.rb:
   Change mouse cursor icon when cursor is dragged.

2002-08-06  KUBO Takehiro <kubo@jiubao.org>

	* extconf.rb, src/lib/gnome.rb, src/rbgnome-canvas.c, 
	rbgnome-canvas-item.c, rbgnome-canvas-util.c, 
	sample/text-gnome/canvas-arrowhead.rb, canvas-primitives.rb: Support libart.
	* src/rbgnome-canvas-util.c: Remove Gnome::CanvasPoints#ref, #unref, #free.

2002-08-04  KUBO Takehiro <kubo@jiubao.org>

	* src/rbgnome-app-helper.c: Fix segmentation fault.

2002-07-30  KUBO Takehiro <kubo@jiubao.org>

   * src/rbgnome-canvas-util.c: Add file. Support Gnome::Canvas,
   CanvasGroup, CanvasItem, CanvasLine, CanvasRect, CanvasText, CanvasImage,
   CanvasWidget, CanvasPoints.
   * sample/test-gnome/canvas-arrowhead.rb, canvas-features.rb, 
   canvas-fifteen.rb, canvas-primitives.rb, canvas.rb, flower.png, toroid.png:
   Add file. Add Gnome::Canvas* sample to test-gnome.rb.
   * sample/test-gnome/test-gnome.rb, src/rbgnome-canvas-group.c, 
   src/rbgnome-canvas-item.c, rbgnome-canvas.c, rbgnome.[ch]:
   Support Gnome::Canvas, CanvasGroup, CanvasItem, CanvasLine, CanvasRect,
   CanvasText, CanvasImage, CanvasWidget, CanvasPoints.

2002-07-28  KUBO Takehiro <kubo@jiubao.org>

	* src/rbgnome.c: Bugfix for Gnome::init when options is not set.

2002-07-28  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgnome.c: Change value of Gnome::POPT_ARGS from "args" to "".
	as suggested by Kazuhiro NISHIYAMA <zn@mbf.nifty.com>.

2002-07-25  Masao Mutoh  <mutoh@highway.ne.jp>

   	* src/rbgnome.c: Add Gnome.init.
   	* sample/*.rb: Support Gnome.init.
   	* sample/gnome-init-popt.rb: Add file. Gnome.init sample.
   	* extconf.rb: use $libs but $LDFLAGS for static link.
   	Reported by WATANABE Hirofumi <eban@os.rim.or.jp>